[package]
name = "main-chain-follower-cli"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
main-chain-follower-api = { workspace = true }
db-sync-follower = { workspace = true, features = ["block-source", "candidate-source"] }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
sidechain-domain = { workspace = true }
