[package]
name = "main-chain-follower-mock"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
epoch-derivation = { workspace = true, default-features = true }
hex = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
main-chain-follower-api = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sidechain-domain = { workspace = true }

[features]
default = [ "std", "block-source", "candidate-source", "native-token" ]
std = [
	"serde_json/std",
	"sidechain-domain/std",
	"main-chain-follower-api/std",
	"epoch-derivation/std",
	"rand/std"
]
block-source = ["main-chain-follower-api/block-source"]
candidate-source = ["main-chain-follower-api/candidate-source"]
native-token = ["main-chain-follower-api/native-token"]
