[package]
name = "main-chain-follower-mock"
version = "1.2.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
main-chain-follower-api = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sidechain-domain = { workspace = true }
sp-timestamp = { workspace = true }
sp-native-token-management = { workspace = true, optional = true }
sidechain-mc-hash = { workspace = true, optional = true }

[features]
default = [ "std", "block-source", "candidate-source", "native-token" ]
std = [
	"serde_json/std",
	"sidechain-domain/std",
	"main-chain-follower-api/std",
	"rand/std",
	"sp-native-token-management?/std"
]
block-source = ["main-chain-follower-api/block-source"]
candidate-source = ["main-chain-follower-api/candidate-source"]
native-token = ["sp-native-token-management"]
mc-hash = ["sidechain-mc-hash"]
