[package]
name = "pallet-session-validator-management"
version = "1.2.0"
description = "FRAME pallet for setting validators with InherentData using pallet-session"
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-session-validator-management = { workspace = true }
sp-io = { workspace = true, optional = true }
sidechain-domain = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
	"scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-session-validator-management/std"
]
try-runtime = ["frame-support/try-runtime"]
mock = [
     "sp-io"
]
