[package]
name = "pallet-sidechain"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-sidechain = { workspace = true }
sidechain-domain = { workspace = true }
sidechain-slots = { workspace = true, features = ["serde"]}
log = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-sidechain/std",
	"parity-scale-codec/std",
	"sidechain-domain/std",
	"sidechain-slots/std",
]
