[package]
name = "sp-address-associations"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
thiserror = { workspace = true }
sidechain-domain = { workspace = true }
sp-api = { workspace = true }

[features]
default = ["std"]
std = [
    "sidechain-domain/std",
    "sp-core/std",
    "sp-api/std",
	"sp-runtime/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
]
cardano = []
