[package]
name = "chain-params"
version = "1.0.0"
authors = [ "IOG" ]
edition = "2021"

[dependencies]
clap = { workspace = true }
sidechain-domain = { workspace = true, default-features = false, features = ["serde"] }
parity-scale-codec = { workspace = true }
plutus = { workspace = true }
plutus-datum-derive = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"clap/std",
	"serde/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sidechain-domain/std",
]
serde = [
	"dep:serde",
	"scale-info/serde",
	"sidechain-domain/serde",
]
