[package]
name = "sidechain-domain"
version = "1.2.0"
authors = [ "Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>" ]
edition = "2021"

[dependencies]
sp-core = { workspace = true, features = ["serde"] }
sp-crypto-hashing = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
num-bigint = { workspace = true }
plutus = { workspace = true }
plutus-datum-derive = { workspace = true }
serde = { workspace = true, optional = true }
byte-string-derive = { workspace = true }
hex = { workspace = true }
derive_more = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
sp-std = { workspace = true }
lazy_static = { workspace = true }
blake2b_simd = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = ["std"]
std = [
	"serde/std",
	"sp-core/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"num-bigint/std",
]
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
]
