[package]
name = "sp-native-token-management"
version = "1.2.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, optional = true }
envy = { workspace = true, optional = true }
main-chain-follower-api = { workspace = true, optional = true, features = ["native-token"] }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sidechain-domain = { workspace = true }
sidechain-mc-hash = { workspace = true, optional = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true, optional = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
thiserror = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["std"]
std = [
    "async-trait",
    "main-chain-follower-api/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sidechain-domain/std",
    "sidechain-mc-hash",
    "sp-api/std",
    "sp-blockchain",
    "sp-inherents/std",
    "sp-runtime/std",
    "thiserror",
    "envy"
]
serde = [
	"dep:serde",
	"scale-info/serde",
	"sidechain-domain/serde",
]
