[package]
name = "partner-chains-plutus-data"
version = "0.1.0"
edition = "2021"
description = "Parsing and serialization of Plutus data schemas used by Partner Chains smart contracts."

[dependencies]
log = { workspace = true }
sidechain-domain = { workspace = true, default-features = true }

cardano-serialization-lib = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
hex-literal = { workspace = true }
pretty_assertions = { workspace = true }
